--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#spring.servlet.multipart.max-file-size=5MB
+#spring.servlet.multipart.max-request-size=20MB
+
+#Caminho que será salvo a foto
+votacao.storage.local.diretorio-fotos=C:\\fotos
